--- a/to-do-list/style.css
+++ b/to-do-list/style.css
@@ -1,17 +1,129 @@
-.container {
-  max-width: 400px;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+
+
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
+.container-lead {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  /* background: crimson; */
+}
+
+h1 {
+ margin-top: 100px;
+ margin-bottom: 35px;
+  margin-left: 100px;
+}
+
+
+
+/* input {
+  display: block;
+  width: 300px;
+  height: 50px;
+  padding: 10px;
+  margin-left: 100px;
+  outline: none;
+  border-radius: 5px;
+} */
+
+.input-search-todo {
+    display: block;
+      width: 500px;
+      height: 50px;
+      padding: 10px;
+      margin-left: 100px;
+      outline: none;
+      border-radius: 5px;
+}
+
+input::placeholder {
+  color: #fff;
+}
+
+
+.todo-list {
+  margin-top: 125px;
+  margin-left: 100px;
+  width: 800px;
+  position: relative;
+}
+.list-group-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+} 
+
+.add-todo {
+    width: 600px;
+    height: 50px;
+    padding: 15px;
+    margin-bottom: 10px;
+    outline: none;
+}
+.myButton {
+  padding: 5px;
+  width: 180px;
+  margin-left: 5px;
+    height: 40px;
+    margin-top: 5px;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  background: #484E53;
+  color: white;
+  position: absolute;
+}
+
+span {
+  color: #fff;
+}
+
+i {
+  color: #fff;
+}
+
+ 
 
 input[type=text],
 input[type=text]:focus {
   color: #fff;
   border: none;
+  border-radius: 15px;
   background: rgba(0, 0, 0, 0.2);
-  max-width: 400px;
+  max-width: 800px;
 }
 
 .todos-container li {
   background: #484E53;
+
 }
 
 .delete {
@@ -21,3 +133,6 @@ input[type=text]:focus {
 .hidden {
   display: none;
 }
+
+
+
