--- a/to-do-list/style.css
+++ b/to-do-list/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 h1 {
- margin-top: 100px;
+ margin-top: 42px;
  margin-bottom: 35px;
   margin-left: 100px;
 }
@@ -82,7 +82,7 @@ input::placeholder {
 } 
 
 .add-todo {
-    width: 600px;
+    width: 615px;
     height: 50px;
     padding: 15px;
     margin-bottom: 10px;
@@ -118,11 +118,14 @@ input[type=text]:focus {
   border: none;
   border-radius: 15px;
   background: rgba(0, 0, 0, 0.2);
-  max-width: 800px;
+  max-width: 820px;
 }
 
 .todos-container li {
-  background: #484E53;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+  /* background: #484E53;s */
 
 }
 
